@@ -11,18 +11,20 @@ WriteMakefile(
     AUTHOR       => 'Otavio Fernandes <otaviof@gmail.com>',
     VERSION_FROM => 'lib/NFS/Watchdog.pm',
     EXE_FILES    => [ 'bin/nfs_watchdog.pl', ],
-    PREREQ_PM    => {
-        'AnyEvent'       => 5.251,
-        'AnyEvent::AIO'  => 1.1,
-        'AnyEvent::Util' => 0,
-        'EV'             => 3.9,
-        'File::Copy'     => 2.13,
-        'File::Slurp'    => 9999.13,
-        'Getopt::Long'   => 2.37,
-        'Git::Wrapper'   => 0.006,
-        'Moose'          => 1.01,
-        'Sys::Syslog'    => 0.22,
-        'Test::More'     => 0.94,
+
+    PREREQ_PM => {
+        'AnyEvent'            => 5.251,
+        'AnyEvent::AIO'       => 1.1,
+        'AnyEvent::Util'      => 5.251,
+        'EV'                  => 3.9,
+        'File::Copy'          => 2.13,
+        'File::Slurp'         => 9999.13,
+        'Getopt::Long'        => 2.37,
+        'Git::Wrapper'        => 0.006,
+        'Moose'               => 1.01,
+        'Net::Ping::External' => 0.13,
+        'Sys::Syslog'         => 0.22,
+        'Test::More'          => 0.94,
     },
 
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
